examples/gateway-api/manifests/standard/http-routing/bar-httproute.yaml
#$ Used in:
#$ - site-src/guides/http-routing.md
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bar-route
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "bar.example.com"
  rules:
  - matches:
    - headers:
      - type: Exact
        name: env
        value: canary
    backendRefs:
    - name: bar-svc-canary
      port: 8080
  - backendRefs:
    - name: bar-svc
      port: 8080
---
# Following are resources not explicitely declared
apiVersion: v1
kind: Service
metadata:
  name: bar-svc-canary
---
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
